--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="screen" title="no title" name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
   </head>
   <body>
-    <div id="app">
 
-    </div>
+          <div id="app"></div>
+
     <script charset="utf-8" type="text/javascript" src="js/main.js">
 
     </script>
